--- a/ASP.NET/arm(ASP.NET Application).csproj
+++ b/ASP.NET/arm(ASP.NET Application).csproj
@@ -21,7 +21,7 @@
     <SccProvider>
     </SccProvider>
     <UseIISExpress>false</UseIISExpress>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <TargetFrameworkProfile>
     </TargetFrameworkProfile>
     <IISExpressSSLPort />
@@ -198,6 +198,13 @@
     <Reference Include="ICSSoft.STORMNET.Business.Audit">
       <HintPath>..\packages\NewPlatform.Flexberry.Audit.1.2.0\lib\net35\ICSSoft.STORMNET.Business.Audit.dll</HintPath>
     </Reference>
+    <Reference Include="System.Data.DataSetExtensions" />
+    <Reference Include="System.Web.ApplicationServices" />
+    <Reference Include="System.Web.DynamicData" />
+    <Reference Include="System.Web.Entity" />
+    <Reference Include="System.Web.Extensions" />
+    <Reference Include="System.Web.Extensions.Design" />
+    <Reference Include="System.Xml.Linq" />
     <Reference Include="UserSettingsService">
       <HintPath>..\packages\NewPlatform.Flexberry.UserSettingsService.1.0.1\lib\net35\UserSettingsService.dll</HintPath>
     </Reference>
@@ -300,20 +307,11 @@
     <Reference Include="System.Web">
       <HintPath>System.Web</HintPath>
     </Reference>
-    <Reference Include="System.Web.Extensions">
-      <HintPath>System.Web.Extensions</HintPath>
-    </Reference>
-    <Reference Include="System.Web.Extensions.Design">
-      <HintPath>System.Web.Extensions.Design</HintPath>
-    </Reference>
     <Reference Include="System.Web.Services">
       <HintPath>System.Web.Services</HintPath>
     </Reference>
     <Reference Include="System.XML">
       <HintPath>System.XML</HintPath>
-    </Reference>
-    <Reference Include="System.Xml.Linq">
-      <HintPath>System.Xml.Linq</HintPath>
     </Reference>
     <Reference Include="System.Workflow.Runtime">
       <HintPath>System.Workflow.Runtime</HintPath>
